Fix a hangup when closing the image

Sometimes KisImage::stopIsolatedMode() is called from within the
context of the stroke, therefore we cannot start another nested
stroke.

BUG:393916